# robot_pc_copy_ws

./: DEPLOY_DEBUGGING.md
.claude/: settings.local.json
curobo_ws/scripts/: test_phase2_step_a.py
curobo_ws/src/configs/: rby1_inha.yml  rby1_inha_edited.yml
inha_control_client/: CMakeLists.txt  package.xml
inha_control_client/include/: reachability_map.hpp
inha_control_client/launch/: grasp_prefilter.launch.py  rby1_action_server.launch.py
inha_control_client/reachability_maps/: left_arm_reachability.npz  left_arm_reachability_torso.npz  reachability_map_rviz.py  right_arm_reachability.npz  right_arm_reachability_torso.npz
inha_control_client/src/: grasp_prefilter_node.cpp  rby1_action_server.cpp  rby1_action_server_bio_ik.cpp  rby1_action_server_bio_ik_backup.cpp  rby1_action_server_bio_ik_v2.cpp  rby1_planner_client.cpp
inha_interfaces/: PATCH_NOTES.md
inha_interfaces/msg/: CandidateResult.msg  RequestSummary.msg
inha_interfaces/srv/: ExecuteGraspSrv.srv.PATCH
inha_rby1_moveit/: .setup_assistant  CMakeLists.txt  package.xml
inha_rby1_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  place_octo.yaml  rby1_inha_controllers.yaml  rby1_v1_1.ros2_control.xacro  rby1_v1_1.srdf  rby1_v1_1.urdf.xacro  ros2_controllers.yaml  sensors_3d.yaml
inha_rby1_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rby1_inha_moveit.launch.py  rsp.launch.py  run_calibration_move.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
inha_rby1_moveit/scripts/: cutlery_test.py  move_to_marker.py
vla_contoller_ws/: check_delay.py
vla_contoller_ws/install/: local_setup.sh  setup.sh
vla_contoller_ws/install/vla_controller/lib/vla_controller/: vla_controller_node
vla_contoller_ws/install/vla_controller/share/vla_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
vla_contoller_ws/install/vla_controller/share/vla_controller/launch/: vla_controller.launch.py
vla_contoller_ws/log/: latest_build
vla_contoller_ws/vla_log/: vla_filter_stats_20260419_085958.txt  vla_filter_stats_20260419_092540.txt  vla_filter_stats_20260419_093333.txt  vla_filter_stats_20260419_093709.txt  vla_filter_stats_20260419_093930.txt  vla_filter_stats_20260419_094034.txt  vla_filter_stats_20260420_082436.txt  vla_filter_stats_20260420_082907.txt
