<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rby1_control_client</name>
  <version>0.0.0</version>
  <description>RBY1 Arm Control Action Server and Client</description>
  <maintainer email="buttontg@naver.com">kimjungtae</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>rclcpp_action</depend>
  <depend>inha_interfaces</depend>
  <depend>moveit_core</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <!-- grasp_prefilter_node 추가 의존성 -->
  <depend>tf2_geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>geometric_shapes</depend>
  <depend>octomap</depend>
  <depend>octomap_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <!-- bio_ik는 kinematics 런타임 플러그인이므로 컴파일 의존성 불필요 -->
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>rby1_inha_moveit</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>